force-app/main/default/objects/SBQQ__OrderItemConsumptionSchedule__c/fields/SBQQ__BillingTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BillingTerm__c</fullName>
        <inlineHelpText>The number used with the billing term unit to determine the billing frequency.</inlineHelpText>
        <label>Billing Term</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>