force-app/main/default/objects/SBQQ__OrderItemConsumptionSchedule__c/fields/SBQQ__BillingTermUnit__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BillingTermUnit__c</fullName>
        <inlineHelpText>The unit used with the billing term to determine the billing frequency.</inlineHelpText>
        <label>Billing Term Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>