force-app/main/default/objects/SBQQ__OrderItemConsumptionSchedule__c/fields/SBQQ__MatchingAttribute__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MatchingAttribute__c</fullName>
        <inlineHelpText>Usage is matched with a consumption schedule if the records share the same Matching Attribute value.</inlineHelpText>
        <label>Matching Attribute</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>