force-app/main/default/objects/SBQQ__OrderItemConsumptionSchedule__c/fields/SBQQ__OrderItem__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Product Consumption Schedules</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </CustomField>