force-app/main/default/objects/SBQQ__OrderItemConsumptionSchedule__c/fields/SBQQ__UnitOfMeasure__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UnitOfMeasure__c</fullName>
        <inlineHelpText>Usage quantities and rates apply to this unit of measurement.</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>